unpackaged/main/default/objects/Rewards_Program__c/Rewards_Program__c.object-meta.xml
<CustomObject>
    <label>Rewards Program</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rewards Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>