unpackaged/main/default/objects/Rewards_Program__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Rewards Programs</relationshipLabel>
    <relationshipName>Rewards_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>