unpackaged/main/default/objects/Rewards_Program__c/fields/Rewards_Number__c.field-meta.xml
<CustomField>
    <fullName>Rewards_Number__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Rewards Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>