unpackaged/main/default/objects/Rewards_Program__c/fields/Rewards_Password__c.field-meta.xml
<CustomField>
    <fullName>Rewards_Password__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Rewards Password</label>
    <length>175</length>
    <type>Text</type>
</CustomField>