unpackaged/main/default/objects/Rewards_Program__c/fields/Rewards_Username__c.field-meta.xml
<CustomField>
    <fullName>Rewards_Username__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Rewards Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>