unpackaged/main/default/objects/Rewards_Program__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>