unpackaged/main/default/objects/Rewards_Program__c/listViews/Car_Rewards_Programs.listView-meta.xml
<ListView>
    <fullName>Car_Rewards_Programs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Vendor_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Car</value>
    </filters>
    <label>Car Rewards Programs</label>
</ListView>