unpackaged/main/default/objects/Rewards_Program__c/listViews/Rewards_Programs.listView-meta.xml
<ListView>
    <fullName>Rewards_Programs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Vendor_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Hotel</value>
    </filters>
    <label>Hotel Rewards Programs</label>
</ListView>